--- a/fibo_pico/prover/Cargo.toml
+++ b/fibo_pico/prover/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "prover"
-version = "0.1.0"
-edition = "2024"
+version = "1.0.0"
 
 [dependencies]
 pico-sdk = { workspace = true }
 bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
+alloy-sol-types = "0.8.0"
 fibonacci-lib ={ path = "../lib"}
-serde = { workspace = true }
