Keccak bench base

--- a/keccak_pico/app/Cargo.toml
+++ b/keccak_pico/app/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 pico-sdk = { workspace = true }
 fibonacci-lib ={ path = "../lib"}
+tiny-keccak = { git = "https://github.com/brevis-network/tiny-keccak",  features = ["keccak"], branch = "patch-v1.0.0" }
