--- a/keccak_pico/Cargo.toml
+++ b/keccak_pico/Cargo.toml
@@ -2,10 +2,10 @@
 members = [ 
     "lib",
     "app", 
-    "prover",
+    "prover"
 ]
 resolver = "2"
 
 [workspace.dependencies]
-pico-sdk = { git = "https://github.com/brevis-network/pico" }
+pico-sdk = { git = "https://github.com/brevis-network/pico", branch = "main"}
 serde = { version = "1.0.205", features = ["derive"] }
