--- a/keccak_sp1/script/Cargo.toml
+++ b/keccak_sp1/script/Cargo.toml
@@ -1,18 +1,12 @@
 [package]
 version = "0.1.0"
-name = "fibonacci-script"
+name = "prover"
 edition = "2021"
-default-run = "fibonacci"
-
-[[bin]]
-name = "fibonacci"
-path = "src/main.rs"
-
 
 [dependencies]
 sp1-sdk = "4.1.0"
 rand = "0.8"
-tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak",  features = ["keccak"] }
+tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak",  features = ["keccak"], tag = "patch-2.0.2-sp1-4.0.0" }
 
 [build-dependencies]
 sp1-build = "4.1.0"
