--- a/keccak_risc0/host/Cargo.toml
+++ b/keccak_risc0/host/Cargo.toml
@@ -9,3 +9,4 @@ risc0-zkvm = { version = "1.2.3" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 rand = "0.8"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
