--- a/rsp_pico/app/Cargo.toml
+++ b/rsp_pico/app/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 pico-sdk = { workspace = true }
-rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "249b34ee0c5307b59dc48f1f45a474b04669c6c4" }
+rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4ceefdfb74c1691dd009168f0c7aec3d746ef8b3" }
 
 bincode = "1.3.3"
 
@@ -19,5 +19,5 @@ curve25519-dalek-ng = { git = "https://github.com/brevis-network/curve25519-dale
 ed25519-consensus = { git = "https://github.com/brevis-network/ed25519-consensus", branch = "patch-v1.0.1" }
 ecdsa = { git = "https://github.com/brevis-network/signatures", package = "ecdsa", branch = "patch-v1.0.1" }
 secp256k1 = { git = "https://github.com/brevis-network/rust-secp256k1", branch = "patch-v1.0.1" }
-substrate-bn = { git = "https://github.com/brevis-network/bn", branch = "patch-v1.0.1" }
+bn = { git = "https://github.com/brevis-network/bn", branch = "patch-v1.0.1" }
 crypto-bigint = { git = "https://github.com/brevis-network/crypto-bigint", branch = "patch-v1.0.0" }
