--- a/keccak_pico/prover/Cargo.toml
+++ b/keccak_pico/prover/Cargo.toml
@@ -8,3 +8,4 @@ bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
 alloy-sol-types = "0.8.0"
 rand = "0.8"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
