--- a/keccak_risc0/host/Cargo.toml
+++ b/keccak_risc0/host/Cargo.toml
@@ -10,3 +10,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 rand = "0.8"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
+
+[features]
+cuda = ["risc0-zkvm/cuda"]
