--- a/rsp_risc0/methods/guest/Cargo.toml
+++ b/rsp_risc0/methods/guest/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "rsp-risc0"
+name = "rsp"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
 
 [dependencies]
 risc0-zkvm = { version = "=1.2.4", default-features = false, features = ["std", "unstable"] }
