--- a/rsp_sp1/program/Cargo.toml
+++ b/rsp_sp1/program/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 [dependencies]
 sp1-zkvm = "4.1.0"
 bincode = "1.3.3"
-rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/" }
+rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "7ca364f3357056ef84dea757b385728bbacd1fe8" }
 
 [patch.crates-io]
 sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" }
