--- a/rsp_sp1/script/Cargo.toml
+++ b/rsp_sp1/script/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 alloy-primitives = "0.8.5"
 bincode = "1.3.3"
 clap = { version = "4.5.7", features = ["derive", "env"] }
-rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/" }
+rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "7ca364f3357056ef84dea757b385728bbacd1fe8" }
 sp1-sdk = "4.1.0"
 
 [features]
