pin pico version to 1.0.1

--- a/keccak_pico/Cargo.toml
+++ b/keccak_pico/Cargo.toml
@@ -6,5 +6,5 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-pico-sdk = { git = "https://github.com/brevis-network/pico", branch = "main"}
+pico-sdk = { git = "https://github.com/brevis-network/pico", rev = "v1.0.1" }
 serde = { version = "1.0.205", features = ["derive"] }
