--- a/rsp_risc0/methods/guest/Cargo.toml
+++ b/rsp_risc0/methods/guest/Cargo.toml
@@ -1,14 +1,14 @@
 [workspace]
 [package]
-name = "rsp-risc0"
+name = "rsp"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-risc0-zkvm = { version = "=1.2.1", default-features = false, features = ["std", "unstable"] }
-risc0-zkvm-platform = { version = "=1.2.1", default-features = false, features = ["sys-getenv"] }
+risc0-zkvm = { version = "=1.2.4", default-features = false, features = ["std", "unstable"] }
+risc0-zkvm-platform = { version = "=1.2.4", default-features = false, features = ["sys-getenv"] }
 serde = { version = "1.0.204", default-features = false, features = ["derive"] }
 bincode = "1.3.3"
 rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4ceefdfb74c1691dd009168f0c7aec3d746ef8b3" }
