--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+.idea
 *.csv
 !bench_results/*.csv
 fibo_sp1/script/proof-with-pis.bin
@@ -7,5 +9,5 @@ fibo_sp1/script/proof-with-pis.bin
 **proof.json
 **/.vscode
 venv
-.idea
-.DS_Store
+**/target
+proof-with-pis.bin
