--- a/keccak/risc0/host/Cargo.toml
+++ b/keccak/risc0/host/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
-risc0-zkvm = { version = "1.2.3" }
+risc0-zkvm = { version = "1.2.3", features = ["unstable"]}
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 rand = "0.8"
