--- a/keccak/risc0/host/Cargo.toml
+++ b/keccak/risc0/host/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
-risc0-zkvm = { version = "1.2.3", features = ["unstable"]}
+risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 rand = "0.8"
