--- a/keccak/risc0/methods/Cargo.toml
+++ b/keccak/risc0/methods/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [build-dependencies]
-risc0-build = { version = "1.2.3" }
+risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
 
 [package.metadata.risc0]
 methods = ["guest"]
+
