--- a/keccak/risc0/methods/guest/Cargo.toml
+++ b/keccak/risc0/methods/guest/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "1.2.3", default-features = false, features = ['std', 'unstable'] }
+risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
 tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", features = ["keccak"], tag = "tiny-keccak/v2.0.2-risczero.0" }
