--- a/keccak/risc0/methods/guest/Cargo.toml
+++ b/keccak/risc0/methods/guest/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-build = { git = "https://github.com/risc0/risc0.git", version = "2.0.0-rc.2" }
+risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "62ebec290c7cb19dc8b2ff991e27248c95f80952", default-features = false, features = ['std', 'unstable'] }
 tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", features = ["keccak"], tag = "tiny-keccak/v2.0.2-risczero.0" }
